checkout.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-deployment
  labels:
    app: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
      - name: checkout
        image: checkout:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  selector:
    app: checkout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
