customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: customer:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: NodePort
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30200
