greeter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-deployment
  labels:
    app: greeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
      - name: greeter
        image: greeter:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-service
spec:
  type: NodePort
  selector:
    app: greeter
  ports:
    - protocol: TCP
      port: 5353
      targetPort: 80
      nodePort: 30000
