rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-deployment
  labels:
    app: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
      - name: messaging
        image: rabbitmq:latest
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
